# Amazon-Lite-ecommerce

./: .gitignore  README.md  pyproject.toml
backend/: db.sqlite3
backend/backend/: settings.py
backend/base/: admin.py  models.py  serializers.py
backend/base/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_image.py  0004_alter_product_image.py
backend/base/views/: order_views.py  product_views.py  user_views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css  index.js
frontend/src/actions/: cartActions.js  orderActions.js  productActions.js  userActions.js
frontend/src/components/: CheckoutSteps.jsx  Footer.jsx  Header.jsx  Paginate.jsx  ProductCard.jsx  ProductCarousel.jsx  Rating.jsx  SearchBox.jsx
frontend/src/screens/: CartScreen.jsx  HomeScreen.jsx  LoginScreen.jsx  OrderListScreen.jsx  OrderScreen.jsx  PaymentScreen.jsx  PlaceOrderScreen.jsx  ProductEditScreen.jsx  ProductListScreen.jsx  ProductScreen.jsx  ProfileScreen.jsx  RegisterScreen.jsx  ShippingScreen.jsx  UserEditScreen.jsx  UserListScreen.jsx
